<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 顶部布局 -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/movie_detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_300"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/movie_detail_coll_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleGravity="bottom"
            app:expandedTitleMarginBottom="@dimen/dimen_25"
            app:expandedTitleMarginStart="@dimen/dimen_20"
            app:expandedTitleTextAppearance="@style/movieDetailExTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/movie_detail_title"
            app:titleEnabled="true">

            <View
                android:id="@+id/movie_detail_coll_head_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/movie_detail_coll_head_photo"
                android:layout_width="@dimen/dimen_150"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_55"
                android:scaleType="centerCrop"
                android:transitionName="@string/t_movie_list_to_detail"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.6" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/movie_detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

            <TextView
                android:id="@+id/movie_detail_hot_talk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@drawable/shape_movie_detail_hot_talk_bg"
                android:drawableLeft="@drawable/fire"
                android:drawablePadding="@dimen/dimen_05"
                android:paddingBottom="@dimen/dimen_08"
                android:paddingLeft="@dimen/dimen_12"
                android:paddingRight="@dimen/dimen_12"
                android:paddingTop="@dimen/dimen_08"
                android:text="热议"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_tip" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <!-- 滑动布局 -->
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/movie_detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- 电影信息 -->
            <include layout="@layout/movie_detail_info_layout" />
            <!-- 想看和看过 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dimen_20"
                android:paddingRight="@dimen/dimen_20">

                <Button
                    android:id="@+id/movie_detail_btn_watch"
                    style="@style/movieDetailWatchBtn"
                    android:layout_marginRight="@dimen/dimen_05"
                    android:text="@string/movie_detail_btn_watch" />

                <Button
                    android:id="@+id/movie_detail_btn_watched"
                    style="@style/movieDetailWatchBtn"
                    android:layout_marginLeft="@dimen/dimen_05"
                    android:text="@string/movie_detail_btn_watched" />
            </LinearLayout>
            <!-- 购票 -->
            <TextView
                android:id="@+id/movie_detail_ticket"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_30"
                android:background="?attr/selectableItemBackground"
                android:drawableLeft="@drawable/ticket"
                android:drawablePadding="@dimen/dimen_10"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dimen_20"
                android:text="@string/movie_detail_tv_ticket"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_item_title"
                android:textStyle="bold" />

            <TextView
                style="@style/movieDetailTipText"
                android:text="@string/movie_detail_tv_jianjie" />
            <!-- 简介 -->
            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/movie_detail_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_05"
                app:animDuration="200"
                app:maxCollapsedLines="4">

                <TextView
                    android:id="@id/expandable_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_content" />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/dimen_10" />

            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <TextView
                style="@style/movieDetailTipText"
                android:text="@string/movie_detail_tv_actor" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_detail_actor_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_170"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_10" />

            <TextView
                style="@style/movieDetailTipText"
                android:text="@string/movie_detail_tv_photo" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_detail_photo_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_140"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_10" />

            <TextView
                style="@style/movieDetailTipText"
                android:text="@string/movie_detail_tv_comment"
                android:textSize="@dimen/text_size_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_detail_comment_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
